--- a/css/style.css
+++ b/css/style.css
@@ -45,5 +45,66 @@ img{
 }
 .vh-100{
     min-height: 100vh;
+       
+}
+h1, h2, h3 {
+    margin-top: 0;
+    line-height: 1.3;
+    margin-bottom: 2rem;
+    color: var(--dark-color)
+}
+.flex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+ /* header */
+#header{
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url("../images/header.jpg") center/cover no-repeat fixed;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+#header .container{
+    width: 100%;
+}
+.header-content{
+    padding-bottom: 4rem;
+}
+.header-content h1{
+    font-size: 4.5rem;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    color: var(--light-color);
+}
+.header-content h3{
+    color: var(--light-color);
+    font-weight: 300;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin-top: 1.5rem;
     
+}
+.social-links{
+    display: flex;
+    margin-top: 3.5rem;
+}
+.social-links li a{
+    width: 40px;
+    height: 40px;
+    background-color: var(--light-color);
+    margin-right: 1rem;
+    border-radius: 0.3rem;
+    box-shadow: 0 0 6px 5px rgba(0,0,0,0.2);
+    transition: var(--transition);
+}
+.social-links li a:hover{
+    opacity: 0.9;
+}
+
+/* media queries */
+@media(min-width: 768px){
+    .header-content h1{
+        font-size: 7rem;
+    }
 }
