--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 :root{
     --transition: all 300ms ease-in-out;
@@ -58,7 +57,7 @@ h1, h2, h3 {
     align-items: center;
     justify-content: center;
 }
-.stone{
+.py-7{
     padding: 7rem 0;
 
 }
@@ -157,11 +156,40 @@ h1, h2, h3 {
     height: 4px;
     background-color: var(--dark-color);
 }
+/* work */
+#work{
+background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url("../images/Documentary/_DSC0083.JPG") center/cover no-repeat fixed;
+color: var(--light-color)
+}
+#work .title h2, #work h3{
+    color: var(--light-color);
+}
+#work .title h2::after{
+    background: var(--light-color);
+}
+.work-bottom{
+    margin-top: 4rem;
+    text-align: center;
+}
+.work-bottom > div .icon img{
+    width:50px;
+    margin: 0 auto 1.7rem auto
+}
 
 /* media queries */
+@media(min-width: 450px){
+    .work-bottom{
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 3rem;
+        row-gap: 0;
+    }
+}
 @media(min-width: 576px){
     .title h2{
         font-size: 4rem;
+    }
+    .work-bottom{
+        grid-template-columns: repeat(4,1fr);
     }
 }
 
@@ -170,11 +198,15 @@ h1, h2, h3 {
         font-size: 7rem;
     }
     .about-content{
+        
         grid-template-columns: repeat(2, 1fr);
         column-gap: 6rem;
         row-gap: 0;
     }
     .about-left{
         margin-bottom: 0;
+    }
+    .work-bottom{
+        grid-template-columns: repeat(6,1fr);
     }
 }
