--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ h1, h2, h3 {
 }
 .title{
     margin-bottom: 5rem;
+    margin-top: 4rem;
 }
 .title h2{
     text-transform: uppercase;
@@ -159,7 +160,7 @@ h1, h2, h3 {
 /* work */
 #work{
 background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url("../images/Documentary/_DSC0083.JPG") center/cover no-repeat fixed;
-color: var(--light-color)
+color: var(--light-color);
 }
 #work .title h2, #work h3{
     color: var(--light-color);
@@ -175,8 +176,108 @@ color: var(--light-color)
     width:50px;
     margin: 0 auto 1.7rem auto
 }
+/* portfolio */
 
-/* media queries */
+.portfolio-grid > div {
+    transition: var(--transition);
+}
+.portfolio-grid > div:hover{
+    transform: scale(0.9)
+}
+/* contact */
+
+#contact{
+    background-color: rgb(248,248,248);
+}
+.contact-content{
+    flex-direction: column;
+    align-items: stretch;
+}
+.contact-left{
+    margin-bottom:5rem;
+}
+.contact-left .lead{
+    padding:0.5rem;
+}
+.contact-left .form{
+    margin-top: 3rem;
+}
+.contact-left form .form-control{
+    display: block;
+    margin: 1.6rem 0;
+    border: 2px solid rgba(0,0,0,0.3);
+    padding: 1rem;
+    width: 100%;
+}
+.contact-left form .form-control::placeholder{
+font-size: 15px;
+font-family: 'Poppins', sans-serif;
+
+}
+.contact-left .btn-submit{
+    padding: 1.4rem 3rem;
+    font-family: 'Poppins', sans-serif;
+    background-color: var(--light-color);
+    color:var(--dark-color);
+    margin-top: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 1.6rem;
+    transition: var(--transition)
+}
+.contact-left .btn-submit:hover{
+    background-color: black;
+}
+/* insta */
+#insta{
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url("../images/Potraits/DSCF6068.JPG") center/cover no-repeat fixed;
+    min-height: 65vh;
+}
+#insta .title h2 {
+    color: var(--light-color);
+}
+#insta .title h2::after{
+    background-color: var(--light-color);
+}
+.insta-grid > div{
+    height: 400px;
+    overflow: hidden;
+    transition: var(--transition)
+}
+.insta-grid > div img{
+    height:100%;
+    object-fit: cover;
+    object-position: center;
+}
+.insta-grid >div:hover{
+    transform:scale(0.9);
+}
+/* footer figure out issue*/ 
+#footer{
+    background-color: var(--dark-color);
+    color: var(--light-color);
+}
+.footer-content{
+    text-align: center;
+}
+.footer-content h3{
+    color: var(--light-color);
+    font-size: 2.5rem;
+    letter-spacing: 1px;
+}
+.footer-content ul{
+    flex-direction: column;
+}
+.footer-content ul li a{
+    color: var(--light-color);
+    font-size: 1.5rem;
+    transition: var(--transition);
+}
+
+
+
+
+/* media queries can be more responsive try using the bootstrap docs */
 @media(min-width: 450px){
     .work-bottom{
         grid-template-columns: repeat(2, 1fr);
@@ -191,13 +292,28 @@ color: var(--light-color)
     .work-bottom{
         grid-template-columns: repeat(4,1fr);
     }
+    .portfolio-grid{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .portfolio-grid > div {
+        height: 350px;
+        overflow: hidden;
+    }
+    .portfolio-grid > div img {
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+    .contact-left form .form-control{
+        max-width: 500px;
+    }
 }
 
 @media(min-width: 768px){
     .header-content h1{
         font-size: 7rem;
     }
-    .about-content{
+    .about-content .work-top{
         
         grid-template-columns: repeat(2, 1fr);
         column-gap: 6rem;
@@ -208,5 +324,45 @@ color: var(--light-color)
     }
     .work-bottom{
         grid-template-columns: repeat(6,1fr);
+    }
+    .contact-content{
+        flex-direction: row;
+    }
+    .contact-right{
+        padding-left: 3rem;
+        width: 50%;
+   }
+   .contact-left{
+    width: 50%;
+   }
+   .insta-grid{
+       grid-template-columns: repeat(2,1fr);
+   }
+ 
+}
+@media(min-width: 992px){
+    .insta-grid{
+        grid-template-columns: repeat(4,1fr);
+    }
+    .insta-grid >div{
+        height:300px;
+        object-fit: cover;
+        object-position: center;
+    }
+    
+}
+@media(min-width: 1200px){
+    .portfolio-grid{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .portfolio-grid > div:nth-child(2){
+        grid-column: 2 / 4;
+    }
+    .portfolio-grid > div:nth-child(6){
+        grid-column: 1 /3;
+    }
+    .portfolio-grid > div:nth-child(11){
+        grid-column: 1 /4;
+                
     }
 }
