--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,22 @@ font-family: 'Poppins', sans-serif;
     font-size: 1.5rem;
     transition: var(--transition);
 }
+.footer-content ul li a:hover{
+    opacity:0.7;
+}
+.footer-content ul li{
+    margin: 0.5rem 1rem;
+}
+.footer-content > div:first-child{
+    margin-bottom: 3rem;
+} 
+.footer-content >div:first-child div{
+    width: 100px;
+    height:100px;
+    overflow:hidden;
+    margin: 5rem auto;
+    border-radius: 50%;
+}
 
 
 
@@ -306,6 +322,9 @@ font-family: 'Poppins', sans-serif;
     }
     .contact-left form .form-control{
         max-width: 500px;
+    }
+    .footer-content ul{
+        flex-direction: row;
     }
 }
 
